[gd_scene load_steps=5 format=2]

[ext_resource path="res://StoreObject.gd" type="Script" id=1]
[ext_resource path="res://images/Environment/Store.png" type="Texture" id=2]
[ext_resource path="res://images/NPC/DolphinNPC/DolphinNPC.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 61.0698, 61.1904 )

[node name="StoreObject" type="StaticBody2D"]
position = Vector2( 256.984, 192.317 )
script = ExtResource( 1 )

[node name="Stand" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Stand"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stand"]
shape = SubResource( 1 )

[node name="DolphinNPC" type="Sprite" parent="."]
position = Vector2( -0.548096, 23.1288 )
z_index = -1
texture = ExtResource( 3 )

[node name="RedKeyButton" type="Button" parent="."]
margin_left = 90.2409
margin_top = -41.687
margin_right = 220.241
margin_bottom = -21.687
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
text = "Red Key (10 Coins)"

[node name="BlueKeyButton" type="Button" parent="."]
margin_left = 91.7813
margin_top = -12.2369
margin_right = 153.781
margin_bottom = 7.76308
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
text = "Blue Key (5 Coins)"

[node name="QuitShoppingButton" type="Button" parent="."]
margin_left = 91.7813
margin_top = 16.7631
margin_right = 218.781
margin_bottom = 36.7631
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
text = "Quit Shopping"

[node name="Speech" type="Label" parent="."]
margin_left = -89.6996
margin_top = -79.2002
margin_right = 83.3004
margin_bottom = -65.2002
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
[connection signal="button_down" from="RedKeyButton" to="." method="_on_RedKeyButton_button_down"]
[connection signal="button_down" from="BlueKeyButton" to="." method="_on_BlueKeyButton_button_down"]
[connection signal="button_down" from="QuitShoppingButton" to="." method="_on_QuitShoppingButton_button_down"]
